Image Changes and finishing

--- a/userproject/templates/index.html
+++ b/userproject/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-Rhythm_strings
+Rhythm_strings  
 {% endblock title %}
 {% block body %}
 
@@ -15,13 +15,15 @@ Rhythm_strings
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/static/img1.jpg" class="d-block w-100" alt="..." height=500 width=600>
+      <!-- https://images.hdqwalls.com/download/blazing-guitar-1600x900.jpg -->
+      
+      <img src="https://i.ytimg.com/vi/1q0qa8XX5uw/maxresdefault.jpg" class="d-block w-100" alt="..." height=500 width=600>
     </div>
     <div class="carousel-item">
-      <img src="/static/img2.png" class="d-block w-100" alt="..." height=500 width=600>
+      <img src="https://www.hdwallpapers.in/download/music_piano_4k_5k_hd_music-1600x900.jpg" class="d-block w-100" alt="..." height=500 width=600>
     </div>
     <div class="carousel-item">
-      <img src="/static/img3.jpg" class="d-block w-100" alt="..." height=500 width=600>
+      <img src="https://s2.best-wallpaper.net/wallpaper/1600x900/1802/Electric-guitar_1600x900.jpg" alt="..." class="d-block w-100" height=500 width=600>
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -59,48 +61,46 @@ Rhythm_strings
       <div class="col">
         <div class="card shadow-sm">
 
-          <img src="/static/img2.png">
+          <img src="https://i.ytimg.com/vi/1q0qa8XX5uw/maxresdefault.jpg">
           <div class="card-body">
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
               content. This content is a little bit longer.</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://youtu.be/1q0qa8XX5uw" target="_blank">view</a></button>
+ 
               </div>
-              <small class="text-muted">9 mins</small>
+              <small class="text-muted">2.5 mins</small>
             </div>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="/static/img2.png">
+          <img src="https://i9.ytimg.com/vi_webp/tWwn3W4Uyas/mqdefault.webp?v=61f58d36&sqp=CKig3JkG&rs=AOn4CLB0ZE57CkkdsN6wj3NUfI8qZMO8RA">
           <div class="card-body">
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
               content. This content is a little bit longer.</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://youtu.be/tWwn3W4Uyas" target="_blank">view</a></button>
               </div>
-              <small class="text-muted">9 mins</small>
+              <small class="text-muted">3.04 mins</small>
             </div>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="/static/img2.png">
+          <img src="https://i9.ytimg.com/vi/Ayeq2-DxTjw/mq2.jpg?sqp=CNSi3JkG&rs=AOn4CLCJ3c5_czcoiRFMBk2F4FGHKZQLdQ">
           <div class="card-body">
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
               content. This content is a little bit longer.</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://youtu.be/Ayeq2-DxTjw" target="_blank">view</a></button>
               </div>
-              <small class="text-muted">9 mins</small>
+              <small class="text-muted">3.18 mins</small>
             </div>
           </div>
         </div>
