--- a/userproject/templates/login.html
+++ b/userproject/templates/login.html
@@ -97,7 +97,7 @@ body {
     <main class="form-signin w-100 m-auto">
       <form method="POST" action="">
         {% csrf_token %}
-        <img class="mb-4" src="https://images.ctfassets.net/yadj1kx9rmg0/wtrHxeu3zEoEce2MokCSi/cf6f68efdcf625fdc060607df0f3baef/quwowooybuqbl6ntboz3.jpg" alt="" width="72" height="57">
+        <img class="mb-4" src="https://yt3.ggpht.com/ytc/AMLnZu8kKdcTBjymprnsp7Ml0M8hq0qbd5ZHtbbcLfvk=s600-c-k-c0x00ffffff-no-rj-rp-mo" alt="" width="72" height="57">
         <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
     
         <div class="form-floating">
