--- a/userproject/templates/about.html
+++ b/userproject/templates/about.html
@@ -6,13 +6,13 @@ About
 
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/static/img2.png" class="d-block w-100" alt="..." height=500 width=600>
+        <img src="https://images.hdqwalls.com/download/blazing-guitar-1600x900.jpg" class="d-block w-100" alt="..." height=500 width=600>
       </div>
       <div class="carousel-item">
-        <img src="/static/img3.jpg" class="d-block w-100" alt="..." height=500 width=600>
+        <img src="https://www.teahub.io/photos/full/150-1505372_music-wallpapers-hd-1080p.jpg" class="d-block w-100" alt="..." height=500 width=600>
       </div>
       <div class="carousel-item">
-        <img src="/static/img1.jpg" class="d-block w-100" alt="..." height=500 width=600>
+        <img src="https://i.pinimg.com/originals/10/cf/67/10cf671079322f82defdb54328f5f158.jpg" alt="..." height=500 width=600>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -24,5 +24,16 @@ About
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  <h1 class="display-4 fst-italic text-center">Welcome to Rhythm_Strings</h1>
+    <p class="lead my-3" style="text-align:center">Music gives a soul to the universe, wings to the mind, flight to the
+      imagination and life to everything.
+      We RhythmNStrings believes in bringing the world close together through our music.
+      So if you love music and your heart craves to sing it all, don't ache, RhythmNStrings is the podium for you, For
+      now, and times beyond.
+      We have our original compositions created which would drive you crazy. Also the variety of content containing
+      elements of music, travel, life lessons, love, motivation including original songs, covers, acoustic covers and
+      much more.
+      So all the music lovers who believe in the magic of music come to join us by subscribing our channel and live the
+      magic of music with RhythmNStrings.</p>
   
 {% endblock body %}
